# rais

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  macos-smoke.yml  release.yml
crates/rabbit/: Cargo.toml  build.rs
crates/rabbit-cli/: Cargo.toml
crates/rabbit-cli/src/: lib.rs
crates/rabbit-core/: Cargo.toml
crates/rabbit-core/src/: arch_probe.rs  archive.rs  artifact.rs  detection.rs  disk_image.rs  error.rs  hash.rs  hfs.rs  install.rs  latest.rs  lib.rs  localization.rs  lock.rs  metadata.rs  model.rs  package.rs  plan.rs  portable.rs  preflight.rs  receipt.rs  report.rs  resource.rs  rollback.rs  self_update.rs  setup.rs  signature.rs  upstream.rs  version.rs
crates/rabbit-core/src/operation/: jaws_scripts.rs  mod.rs  osara.rs  reaper.rs  sws.rs
crates/rabbit-core/tests/: macos_upstream_smoke.rs
crates/rabbit-platform/: Cargo.toml
crates/rabbit-platform/src/: disk_image.rs  file_version.rs  jaws.rs  lib.rs  paths.rs  registry.rs  signature.rs
crates/rabbit-ui-wxdragon/: Cargo.toml
crates/rabbit-ui-wxdragon/src/: lib.rs  wx_app.rs
crates/rabbit/src/: main.rs
crates/rabbit/windows/: rabbit.exe.manifest
crates/rais/: Cargo.toml  build.rs
crates/rais-cli/: Cargo.toml
crates/rais-cli/src/: lib.rs  main.rs
crates/rais-core/: Cargo.toml
crates/rais-core/src/: archive.rs  artifact.rs  detection.rs  disk_image.rs  error.rs  hash.rs  hfs.rs  install.rs  latest.rs  lib.rs  localization.rs  lock.rs  metadata.rs  operation.rs  package.rs  plan.rs  portable.rs  preflight.rs  reapack.rs  receipt.rs  report.rs  resource.rs  rollback.rs  self_update.rs  setup.rs  signature.rs  upstream.rs  version.rs
crates/rais-core/src/operation/: jaws_scripts.rs  mod.rs  osara.rs  reaper.rs  sws.rs
crates/rais-core/tests/: macos_upstream_smoke.rs
crates/rais-platform/: Cargo.toml
crates/rais-platform/src/: disk_image.rs  elevation.rs  file_version.rs  jaws.rs  lib.rs  paths.rs  registry.rs  signature.rs
crates/rais-ui-wxdragon/: Cargo.toml  build.rs
crates/rais-ui-wxdragon/src/: lib.rs  main.rs  wx_app.rs
crates/rais-ui-wxdragon/windows/: rais-ui-wxdragon.exe.manifest
crates/rais/src/: main.rs
crates/rais/windows/: rais.exe.manifest
locales/de-DE/: rabbit.ftl  rais.ftl
locales/en-US/: rabbit.ftl  rais.ftl
packaging/macos/: Info.plist  build-bundle.sh
scripts/: build-wxdragon-test.ps1
