[workspace]
members = [
    "crates/rais-cli",
    "crates/rais-core",
    "crates/rais-platform",
    "crates/rais-ui-wxdragon",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
fluent-bundle = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.33"
tempfile = "3.10"
thiserror = "1.0"
unic-langid = "0.9"
wxdragon = "0.9.15"
zip = { version = "2", default-features = false, features = ["deflate"] }
