[package]
name = "rais-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluent-bundle.workspace = true
reqwest.workspace = true
rusqlite = { version = "0.37", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
unic-langid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile.workspace = true
