[package]
name = "rais-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
] }

[dev-dependencies]
tempfile.workspace = true
